# gha_cpp-alexeyalekzz

./: CMakeLists.txt
.github/workflows/: main.yml
include/: task5.h
src/: Postfix.cpp  main.cpp  main1.cpp  main5.cpp  task1.cpp  task2.cpp  task4.cpp
